--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,5 @@
 <div class="user-details">
-  <h1>My Expertise</h1>
-  <p>{{ site.user_description }}</p>
+  <p>We give a full set of services from design to creative landing. Help you realize your entrepreneurial dreams. Although business matters can be complicated, it's our thing is to make them simple and reliable for you. </p>
 </div>
 <div class="user">
   <div class="tech">
